Changes on products

--- a/.gitignore
+++ b/.gitignore
@@ -424,3 +424,6 @@ baseline.json
 # Ignore AIO files, useful when changing branches 
 aio/node_modules
 aio/out-tsc
+
+wwwroot/images/products/*
+Momon.Biju.Web/wwwroot/images/products
