--- a/Momon.Biju.App.Infra/Momon.Biju.App.Infra.csproj
+++ b/Momon.Biju.App.Infra/Momon.Biju.App.Infra.csproj
@@ -23,4 +23,8 @@
       <ProjectReference Include="..\Momon.Biju.App.Domain\Momon.Biju.App.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Contexts\Migrations\" />
+    </ItemGroup>
+
 </Project>
