--- a/Momon.Biju.App.Infra/Momon.Biju.App.Infra.csproj
+++ b/Momon.Biju.App.Infra/Momon.Biju.App.Infra.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.1.66" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.4" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.6" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -24,6 +26,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Contexts\Auth\Migrations\" />
       <Folder Include="Contexts\Migrations\" />
     </ItemGroup>
 
