--- a/Momon.Biju.Web/appsettings.Development.json
+++ b/Momon.Biju.Web/appsettings.Development.json
@@ -1,11 +1,25 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "ConnectionStrings": {
     "MomonBijuDb": "Server=localhost,1433;Database=MomonBiju;User Id=sa;Password=YourStrong!Passw0rd;Encrypt=False;"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "C:/logs/MomonBiju/MomonBiju_.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 3,
+          "rollOnFileSizeLimit": true,
+          "fileSizeLimitBytes": 52428800
+        }
+      }
+    ],
+    "Properties": {
+      "Application": "MomonBiju"
+    }
   }
 }
