Sending order message by Whatsapp

--- a/Momon.Biju.Web/appsettings.Development.json
+++ b/Momon.Biju.Web/appsettings.Development.json
@@ -21,5 +21,8 @@
     "Properties": {
       "Application": "MomonBiju"
     }
+  },
+  "OrderContent": {
+    "PhoneNumber": "+351912322866"
   }
 }
