--- a/Momon.Biju.Web/appsettings.json
+++ b/Momon.Biju.Web/appsettings.json
@@ -8,5 +8,14 @@
   "ConnectionStrings": {
     "MomonBijuDb": ""
   },
+  "OrderContent": {
+    "PhoneNumber": "",
+    "WhatsappMessage": {
+      "HelloMessage": "Olá, meu nome é {0}.\nGostaria de fazer um pedido com os seguintes produtos:\n\n",
+      "OrderMessage": "#{0} • Produto: {1} | Quantidade: {2} | Preço unitário: {3}",
+      "TotalPurchaseMessage": "\nTotal da compra: {0}\n",
+      "AdditionalInformationMessage": "Informação adicional:\n{0}"
+    }
+  },
   "AllowedHosts": "*"
 }
